--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 before_install:
-  - gem install bundler -v 1.16.1 --no-document
+  - gem install bundler --no-document
 bundler_args: "--jobs=2"
 script:
   - bundle exec rspec
