--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ rvm:
   - 2.2.2
   - 2.3
   - 2.4
-  - 2.5.0
-  - 2.6.0
+  - 2.5
+  - 2.6
   - ruby-head
 gemfile:
   - gemfiles/activerecord_5_0.gemfile
@@ -31,6 +31,11 @@ notifications:
 matrix:
   allow_failures:
     - rvm: ruby-head
+  include:
+    - rvm: 2.6
+      env: RUBYOPT="--jit"
+    - rvm: ruby-head
+      env: RUBYOPT="--jit"
 cache: bundler
 sudo: false
 dist: precise
