--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - travis_retry gem install bundler --no-document || travis_retry gem install bundler --no-document -v 1.17.3
 bundler_args: "--jobs=2"
 script:
-  - bundle exec rspec
+  - RUBYOPT=$RSPEC_RUBYOPT bundle exec rspec
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 branches:
@@ -36,9 +36,9 @@ matrix:
     - gemfile: gemfiles/rails_6_0.gemfile # TODO: Remove after rails 6.0.0 is released
   include:
     - rvm: 2.6
-      env: RUBYOPT="--jit"
+      env: RSPEC_RUBYOPT="--jit"
     - rvm: ruby-head
-      env: RUBYOPT="--jit"
+      env: RSPEC_RUBYOPT="--jit"
   exclude:
     # Rails 6.0+ requires Ruby 2.5+
     - rvm: 2.2.2
