--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,10 +34,10 @@ jobs:
           - ruby:2.7
           - rubylang/ruby:master-nightly-bionic
         gemfile:
-          - rails_5_0.gemfile
-          - rails_5_1.gemfile
-          - rails_5_2.gemfile
-          - rails_6_0.gemfile
+          - rails_5_0
+          - rails_5_1
+          - rails_5_2
+          - rails_6_0
         include:
           - ruby: rubylang/ruby:master-nightly-bionic
             allow_failures: "true"
@@ -45,18 +45,17 @@ jobs:
         exclude:
           # Rails 6.0 requires Ruby 2.5+
           - ruby:    ruby:2.2
-            gemfile: rails_6_0.gemfile
+            gemfile: rails_6_0
           - ruby:    ruby:2.3
-            gemfile: rails_6_0.gemfile
+            gemfile: rails_6_0
           - ruby:    ruby:2.4
-            gemfile: rails_6_0.gemfile
+            gemfile: rails_6_0
 
     env:
-      BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}
+      BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
     steps:
       - uses: actions/checkout@v2
-
 
       - name: Cache vendor/bundle
         uses: actions/cache@v1
