--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
           - rails_5_1
           - rails_5_2
           - rails_6_0
+          - rails_6_1
         include:
           - ruby: rubylang/ruby:master-nightly-bionic
             allow_failures: "true"
@@ -47,6 +48,14 @@ jobs:
             gemfile: rails_6_0
           - ruby:    ruby:2.4
             gemfile: rails_6_0
+
+          # Rails 6.1 requires Ruby 2.5+
+          - ruby:    ruby:2.2
+            gemfile: rails_6_1
+          - ruby:    ruby:2.3
+            gemfile: rails_6_1
+          - ruby:    ruby:2.4
+            gemfile: rails_6_1
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
