Rails 5.x doesn't work on Ruby 3.0+

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,14 @@ jobs:
           - ruby:    ruby:2.4
             gemfile: rails_6_1
 
+          # Rails 5.x doesn't work on Ruby 3.0+
+          - ruby:    ruby:3.0
+            gemfile: rails_5_0
+          - ruby:    ruby:3.0
+            gemfile: rails_5_1
+          - ruby:    ruby:3.0
+            gemfile: rails_5_2
+
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
