--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           - rails_5_2
           - rails_6_0
           - rails_6_1
+          - rails_7_0
         include:
           - ruby: rubylang/ruby:master-nightly-bionic
             allow_failures: "true"
@@ -56,6 +57,18 @@ jobs:
             gemfile: rails_6_1
           - ruby:    ruby:2.4
             gemfile: rails_6_1
+
+          # Rails 7.0+ requires Ruby 2.7+
+          - ruby:    ruby:2.2
+            gemfile: rails_7_0
+          - ruby:    ruby:2.3
+            gemfile: rails_7_0
+          - ruby:    ruby:2.4
+            gemfile: rails_7_0
+          - ruby:    ruby:2.5
+            gemfile: rails_7_0
+          - ruby:    ruby:2.6
+            gemfile: rails_7_0
 
           # Rails 5.x doesn't work on Ruby 3.0+
           - ruby:    ruby:3.0
