--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: ${{ (matrix.runner != '' && matrix.runner) || 'ubuntu-latest' }}
 
     strategy:
       fail-fast: false
@@ -37,6 +38,11 @@ jobs:
           - rails_6_0
           - rails_6_1
           - rails_7_0
+
+        include:
+          # ref. https://github.com/ruby/setup-ruby/issues/496#issuecomment-1520662740
+          - ruby: "2.2"
+            runner: ubuntu-20.04
 
         exclude:
           # Rails 6.0+ requires Ruby 2.5+
