--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           - rails_6_0
           - rails_6_1
           - rails_7_0
+          - rails_7_1
 
         include:
           # ref. https://github.com/ruby/setup-ruby/issues/496#issuecomment-1520662740
@@ -70,6 +71,16 @@ jobs:
             gemfile: rails_7_0
           - ruby:    "2.6"
             gemfile: rails_7_0
+          - ruby:    "2.2"
+            gemfile: rails_7_1
+          - ruby:    "2.3"
+            gemfile: rails_7_1
+          - ruby:    "2.4"
+            gemfile: rails_7_1
+          - ruby:    "2.5"
+            gemfile: rails_7_1
+          - ruby:    "2.6"
+            gemfile: rails_7_1
 
           # Rails 5.x doesn't work on Ruby 3.0+
           - ruby:    "3.0"
