--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,14 @@ jobs:
           - rails_7_1
           - rails_7_2
           - rails_8_0
+          - rails_8_1
 
         exclude:
           # Rails 8.0+ requires Ruby 3.2+
           - ruby:    "3.1"
             gemfile: rails_8_0
+          - ruby:    "3.1"
+            gemfile: rails_8_1
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
