Fix deprecation warning

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
           bundler-cache: true
           cache-version: ${{ matrix.gemfile }}
 
-      - run: bundle update --jobs $(nproc) --retry 3
+      - run: bundle update --all --jobs $(nproc) --retry 3
 
       - run: bundle exec rspec
 
@@ -79,7 +79,7 @@ jobs:
           ruby-version: ruby
           bundler-cache: true
 
-      - run: bundle update --jobs $(nproc) --retry 3
+      - run: bundle update --all --jobs $(nproc) --retry 3
 
       - name: yard generating test
         run: |
